<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CDDC39"
    app:layout_insetEdge="none"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CDDC39"
        android:paddingBottom="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/menu_dropdown_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            app:srcCompat="@drawable/final_project_menu_icon" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/menu_dropdown"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="#CDDC39"
        android:elevation="1dp"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/footer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">
        <!-- https://developer.android.com/develop/ui/views/theming/shadows-clipping -->

        <TextView
            android:id="@+id/dropdown_item1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/menu_dropdown_title1" />

        <TextView
            android:id="@+id/dropdown_item2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/menu_dropdown_title2" />

        <TextView
            android:id="@+id/dropdown_item3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/menu_dropdown_title3" />

        <TextView
            android:id="@+id/dropdown_item4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:text="@string/menu_dropdown_title4" />

        <TextView
            android:id="@+id/dropdown_item5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_dropdown_title5" />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="org.overlake.finalproject.WelcomeFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#E6E7E8"
        app:layout_constraintBottom_toTopOf="@+id/footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CDDC39"
        android:fitsSystemWindows="true"
        app:menu="@menu/footer_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:itemActiveIndicatorStyle="@android:color/transparent"/>

</androidx.constraintlayout.widget.ConstraintLayout>